@@ -69,6 +69,7 @@ Version 1.9.0-svn:
    * Display weapon stats in recruit/recall dialog the same way as in sidebar.
    * Remember recall list sorting order.
    * New mouseover image instead of simply highlighting the hex
+   * Allow checking out terrain defense for units when it's not your turn.
 
  * Miscellaneous and bug fixes:
    * All villages except water and swamp villages can now be placed on any base
